--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
             "Tests\\": "tests/"
         }
     },
+    "provide": {
+        "ext-mongo": "1.6.12"
+    },
     "require": {
         "php": ">=7.0.4",
         "symfony/symfony": "3.0.*",
@@ -26,7 +29,17 @@
         "symfony/monolog-bundle": "^2.8",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "^2.0"
+        "incenteev/composer-parameter-handler": "^2.0",
+        "friendsofsymfony/rest-bundle": "^1.7",
+        "jms/serializer-bundle": "^1.1",
+        "doctrine/mongodb": "dev-master",
+        "doctrine/mongodb-odm": "dev-master",
+        "doctrine/mongodb-odm-bundle": "dev-master",
+        "mongodb/mongodb":"@beta",
+        "alcaeus/mongo-php-adapter": "dev-composer-provide",
+        "ramsey/uuid": "^3.2",
+        "cocur/slugify": "^2.0",
+        "nelmio/api-doc-bundle": "^2.11"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
