--- a/docker-cloud.yml
+++ b/docker-cloud.yml
@@ -1,7 +1,7 @@
 skills-web:
     image: karolsojko/skills-api
     volumes:
-        - .:/var/www/skills-api
+        - /var/www/skills-api
     working_dir: /var/www/skills-api
     expose:
         - "9000"
