--- a/docker-cloud.yml
+++ b/docker-cloud.yml
@@ -6,14 +6,14 @@ skills-web:
     expose:
         - "9000"
     links:
-        - skills-db
+        - skills-db:db
     restart: always
 skills-nginx:
     image: nginx:1.9
     volumes_from:
         - skills-web
     links:
-        - skills-web
+        - skills-web:web
     ports:
         - "80"
     restart: always
