--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -99,3 +99,11 @@ nelmio_api_doc:
     name: Skills API
     sandbox:
         enabled: false
+
+nelmio_cors:
+    paths:
+        '^/api/':
+            allow_origin: ['*']
+            allow_headers: ['X-Custom-Auth']
+            allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
+            max_age: 3600
