--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ web:
     build: .
     volumes:
         - .:/var/www/skills-api
+        - ./docker/php/php.ini:/usr/local/etc/php/php.ini
+        - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     working_dir: /var/www/skills-api
     expose:
         - "9000"
