--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,9 @@
         "ramsey/uuid": "^3.2",
         "cocur/slugify": "^2.0",
         "nelmio/api-doc-bundle": "^2.11",
-        "nelmio/cors-bundle": "^1.4"
+        "nelmio/cors-bundle": "^1.4",
+        "oneup/flysystem-bundle": "^1.3",
+        "league/flysystem-aws-s3-v3": "^1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
