--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -14,3 +14,6 @@ services:
     app.use_case.remove_skill:
         class: Domain\UseCase\RemoveSkill
         arguments: ['@app.repository.skill']
+    app.use_case.add_resource:
+        class: Domain\UseCase\AddResource
+        arguments: ['@app.repository.skill']
