--- a/composer.json
+++ b/composer.json
@@ -32,11 +32,8 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "friendsofsymfony/rest-bundle": "^1.7",
         "jms/serializer-bundle": "^1.1",
-        "doctrine/mongodb": "dev-master",
-        "doctrine/mongodb-odm": "dev-master",
-        "doctrine/mongodb-odm-bundle": "dev-master",
-        "mongodb/mongodb":"@beta",
-        "alcaeus/mongo-php-adapter": "dev-composer-provide",
+        "doctrine/mongodb-odm-bundle": "^3.2.1",
+        "alcaeus/mongo-php-adapter": "^1.0.0",
         "ramsey/uuid": "^3.2",
         "cocur/slugify": "^2.0",
         "nelmio/api-doc-bundle": "^2.11",
