Add type property to Resources
Add type property to Resources

Add type property to Resources

Add type property to Resources

Add type property to Resources

--- a/src/Infrastructure/ODM/Mapping/Resource.mongodb.yml
+++ b/src/Infrastructure/ODM/Mapping/Resource.mongodb.yml
@@ -5,6 +5,9 @@ Domain\Model\Resource:
             type: string
             id: true
             strategy: NONE
+            
+        type:
+            type: string
         url:
             type: string
         description:
