AuthorId for resources CREATE

--- a/src/Infrastructure/ODM/Mapping/Resource.mongodb.yml
+++ b/src/Infrastructure/ODM/Mapping/Resource.mongodb.yml
@@ -5,10 +5,12 @@ Domain\Model\Resource:
             type: string
             id: true
             strategy: NONE
-            
+
         type:
             type: string
         url:
             type: string
         description:
+            type: string
+        authorId:
             type: string
