Add user votes as embeded documents for Skill Resources. Implement Voting as a POST request
AuthorId for resources CREATE

Fix merge conflict

Fix documentation comment

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -23,6 +23,11 @@ resource_remove:
     prefix: /api/v1
     resource: AppBundle\Controller\Skills\Resources\DeleteController
 
+resource_vote_create:
+    type:     rest
+    prefix: /api/v1
+    resource: AppBundle\Controller\Skills\Resources\ResourceVotes\CreateController
+
 NelmioApiDocBundle:
     resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
     prefix:   /api/doc
