--- a/src/Infrastructure/ODM/Mapping/Resource.mongodb.yml
+++ b/src/Infrastructure/ODM/Mapping/Resource.mongodb.yml
@@ -5,10 +5,17 @@ Domain\Model\Resource:
             type: string
             id: true
             strategy: NONE
-            
+
         type:
             type: string
         url:
             type: string
         description:
             type: string
+        authorId:
+            type: string
+        votesTotal:
+            type: integer
+    embedMany:
+        votes:
+            targetDocument: Domain\Model\ResourceVote
